# mma-os

./: .env.example  .gitignore  DOCTRINE.md  PUSH_TO_GITHUB.md  README.md  langgraph.json  pyproject.toml
docs/: BTF-CLIENT-WORKSPACE-SPEC.md  BTF-CUSTOMER-EXPERIENCE.md  BUILD-TO-FUND-CANON.md  DOCTRINE-102-MULTI-DOOR-ENTRY.md  DOCTRINE-104-PAIGE-POSITIONING.md  DOCTRINE-105-PER-PRODUCT-SEND-LAYER.md  DOCTRINE-106-UNIFIED-INTAKE-BRAIN-ROUTING.md  DOCTRINE-107-MARKETING-LAYER-FOUNDATION.md  DOCTRINE-108-ALERT-ROUTING-RULE.md  DOCTRINE-109-PAIGE-SUPABASE-ACCESS-BOUNDARY.md  DOCTRINE-110-LEGAL-DEPARTMENT-AND-CLIENT-ONBOARDING.md  DOCTRINE-111-LEAD-VS-CLIENT-STATE-DISTINCTION.md  DOCTRINE-112-SPECIALIST-SUB-AGENT-PATTERN.md  DOCTRINE-113-LEGAL-DEPARTMENT-PHILOSOPHY.md  DOCTRINE-114-TEMPLATE-CONTENT-DELIVERY-SEPARATION.md  DOCTRINE-115-PAIGE-MULTI-TENANT-PIVOT.md  DOCTRINE-116-BUILD-THE-SYSTEM-NOT-THE-USE-CASE.md  DOCTRINE-117-ENTITY-SEPARATION-AND-MCP-CONTROL-PLANE.md  DOCTRINE-118-MASTER-TENANT-VS-SUB-TENANT-AUTOMATION.md  DOCTRINE-119-CONVERSATIONAL-CONTROL-PLANE.md  DOCTRINE-120-SCHEMA-CONSTRAINTS-MIRROR-APPLICATION-ENUMS.md  DOCTRINE-121-PAIGE-SUB-AGENT-ARCHITECTURE.md  DOCTRINE-122-TWO-PHASE-COMMIT-FOR-AI-STAGED-WRITES.md  DOCTRINE-123-ROLE-BASED-LOGIN-ROUTING.md  DOCTRINE-124-SELF-EXTENDING-SUB-AGENT-FACTORY.md  DOCTRINE-125-PER-FEATURE-ROLE-GATING.md  DOCTRINE-126-FEDERATION-BOUNDARY.md  DOCTRINE-128-BACKGROUND-SAFE-DB-TRIGGER-PATTERN.md  DOCTRINE-74-VERIFY-JWT-FALSE-FOR-CUSTOM-BEARER-AUTH.md  LAUNCH-PAD-MARKET-BRIEF.md  PAIGE-MCP-CONNECTION-GUIDE.md  (+2 more)
src/: __init__.py
(+52 files in other folders)
